# cyx

./: .gitignore  AGENTS.md  CHANGELOG.md  CROSS_PLATFORM_SUPPORT.md  Cargo.toml  DATA_IMPROVEMENTS.md  Makefile  PUSH_CHECKLIST.md  README.md  build.rs  cyx.tape  install.sh
.github/workflows/: release.yml
data/: dependencies.json  embedding_models.json  ollama_models.json
data/normalization/: abbreviations.json  stopwords.json
docs/: AGENTS.md  BUILDING.md  CHANGELOG.md  DEVELOPMENT.md  FEATURES.md  FULL_README.md  INSTALLATION.md  TESTING.md  USAGE.md
examples/: BUILDING.md  test_normalizer.rs
openspec/: AGENTS.md  project.md
scripts/: cyx-launcher.sh  package-release.sh
src/: lib.rs  main.rs
src/cache/: embedder.rs  embedder_onnx.rs  mod.rs  normalizer.rs  storage.rs
src/cli/: args.rs  commands.rs  context.rs  mod.rs
src/config/: manager.rs  mod.rs
src/llm/: groq.rs  mod.rs  ollama.rs  perplexity.rs  provider.rs
src/search/: duckduckgo.rs  fetcher.rs  mod.rs
src/session/: interactive.rs  mod.rs
src/ui/: display.rs  mod.rs  table.rs
src/update/: checker.rs  metadata.rs  mod.rs
tests/: normalizer.rs
