[package]
name = "cyx"
version = "0.2.0"
edition = "2021"
authors = ["neur0map"]
license = "MIT"
description = "Command-first cybersecurity companion - instant executable commands for pentesting"
repository = "https://github.com/neur0map/cyx"
keywords = ["cybersecurity", "pentesting", "hacking", "cli", "security"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTML to Markdown conversion
html2text = "0.12"

# UI/Display
comfy-table = "7.1"
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"

# System paths
directories = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
html-escape = "0.2"
unicode-width = "0.1"

# Cache & Database
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# Vector similarity with ONNX Runtime
bincode = "1.3"
ort = { version = "1.16", features = ["download-binaries"] }
tokenizers = "0.19"
ndarray = "0.15"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
