[package]
name = "cyx"
version = "0.2.1"
edition = "2021"
authors = ["neur0map"]
license = "MIT"
description = "Fast, simple command-line security tool powered by AI. Install with cargo, setup in 30 seconds."
repository = "https://github.com/neur0map/cyx"
keywords = ["security", "llm", "cli", "groq", "perplexity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "docs/",
    "tests/",
    "scripts/",
    "openspec/",
    ".github/",
    ".claude/",
    ".DS_Store",
    "examples/"
]

[dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.24", features = ["json", "blocking", "stream"] }

# CLI framework
clap = { version = "4.5.51", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

# HTML to Markdown conversion
html2text = "0.16"

# UI/Display
comfy-table = "7.2"
colored = "2.1"
dialoguer = "0.12"
indicatif = "0.18"

# System paths
directories = "5.0"
dirs = "5.0"
walkdir = "2.5"

# Error handling
anyhow = "1.0.100"

# Utilities
regex = "1.12"
urlencoding = "2.1.3"
html-escape = "0.2.13"

# Update system
semver = "1.0"

# Cache & Database
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }

# Vector similarity with ONNX Runtime
bincode = "1.3"
ort = { version = "1.16", features = ["download-binaries"] }
tokenizers = "0.22"
ndarray = "0.15"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
